# TURTLE

./: instructions.txt
gamess-cpu/: configure  diffs  gfortran.txt  out.tmp  pgi.txt
gamess-cpu/.svn/: all-wcprops
gamess-cpu/AgentX/: axcshenv.in  distbuild.sh
gamess-cpu/AgentX/libxml2/: Makefile.am  aclocal.m4  config.h.in  configure
gamess-cpu/AgentX/libxml2/.svn/: entries
gamess-cpu/AgentX/libxml2/.svn/text-base/: configure.in.svn-base
gamess-cpu/AgentX/libxml2/bakefile/.svn/: entries
gamess-cpu/AgentX/libxml2/include/.svn/: entries
gamess-cpu/AgentX/libxml2/include/libxml/.svn/: entries
gamess-cpu/AgentX/libxml2/local/.svn/: all-wcprops
gamess-cpu/AgentX/libxml2/macos/.svn/: all-wcprops
gamess-cpu/AgentX/libxml2/macos/src/.svn/: all-wcprops
gamess-cpu/AgentX/libxml2/vms/.svn/: entries
gamess-cpu/AgentX/libxml2/win32/.svn/: all-wcprops  entries
gamess-cpu/AgentX/libxml2/win32/wince/.svn/: entries
gamess-cpu/AgentX/src/: Makefile.am  Makefile.in  dictionary.c
gamess-cpu/AgentX/src/.svn/: entries
gamess-cpu/AgentX/src/.svn/text-base/: agentx.c.svn-base  axArray.c.svn-base  strlib.c.svn-base
gamess-cpu/config/: hppa2.0w-hp-hpux11-serial-hpuxf90.mk  i386-unknown-netbsdelf-5-serial-g95.mk  i686-pc-linux-gnu-parallel-intel7.mk  i686-pc-linux-gnu-serial-gfortran.mk  i686-pc-linux-gnu-serial-gnu33.mk  i686-pc-linux-gnu-serial-intel7.mk  i686-pc-linux-gnu-serial-pgi7.1.mk  ia64-unknown-linux-gnu-serial-intel7.mk  keywords.html  mips-sgi-irix6.5-parallel-mips.mk  mips-sgi-irix6.5-serial-mips.mk  powerpc-ibm-aix-mpi-xlf.mk  powerpc-ibm-aix-serial-xlf.mk  powerpc64-pseries64-linux-gnu-serial-xlf.mk  x86_64-unknown-linux-gnu-parallel-intel11.mk  x86_64-unknown-linux-gnu-parallel-intel15.0.mk_orig  x86_64-unknown-linux-gnu-parallel-pgi.mk  x86_64-unknown-linux-gnu-serial-g95.mk  x86_64-unknown-linux-gnu-serial-gfortran.mk  x86_64-unknown-linux-gnu-serial-hmpp.mk  x86_64-unknown-linux-gnu-serial-intel11.mk  x86_64-unknown-linux-gnu-serial-pgi.mk  x86_64-unknown-linux-gnu-serial-pgi71.mk
gamess-cpu/dft/: Lebedev-Laikov.f  Lebedev-Laikov.m  Makefile  chf.f  chf.optrpt  coulomb.f  deriv2e.f  deriv2e.m  deriv2e.optrpt  dftbasis.f  dftbasis.m  exp_dksm_hess.f  exp_dksm_hess.m  gadft.m  gadft.optrpt  gamess.f  gamess.m  gden.f  gden.m  global.f  integ2e.f  integ2e.optrpt  integ_data.f  integ_data.m  integ_te2c_norm.f  integ_te2c_norm.optrpt  integ_te3c_rep.m  interface.f  interface.m  intpack.f  intpack.optrpt  jfitg.f  jfitg.m  jfitg.optrpt  jkder_dft.f  jkint_dft.f  matform.f  matform.m  matform.optrpt  matpack.f  (+16 more)
gamess-cpu/diesel/: Makefile  Makefile.include  VersionDate.h
gamess-cpu/dl-find/: Makefile  dl-find.f90  dl-find.optrpt  dlf_allocate.mod  dlf_bspline.mod  dlf_checkpoint.mod  dlf_conint.mod  dlf_conint.optrpt  dlf_constants.mod  dlf_convergence.f90  dlf_convergence.mod  dlf_convergence.optrpt  dlf_coords.optrpt  dlf_dimer.mod  dlf_formstep.f90  dlf_formstep_module.mod  dlf_global.mod  dlf_hdlc_constraint.optrpt  dlf_hdlc_interface.optrpt  dlf_hdlc_matrixlib.optrpt  dlf_hdlc_primitive.optrpt  dlf_hessian.mod  dlf_linalg.optrpt  dlf_neb.mod  (+27 more)
gamess-gpu/: README  configure
gamess-gpu/AgentX/fortran/: Makefile.am  fagentxi.f90
gamess-gpu/AgentX/fortran/.svn/: entries
gamess-gpu/AgentX/fortran/.svn/text-base/: Makefile.in.svn-base
gamess-gpu/AgentX/python/: Makefile.am  libpyagentx.py
gamess-gpu/AgentX/python/.svn/: all-wcprops  entries
gamess-gpu/AgentX/python/.svn/text-base/: pytypemaps.i.svn-base
isolation/: cache.f  cache.o.0.1482.fs0  cache.out  cache_1000000.out  cache_10000000.out  cache_1000000_copyin.out  cache_1000000_managed.out  dump.out  ez_gmix.f  gmix.o.0.395.fs0  gmix.out  gmix_1000000.out  index_calc.f
(+5957 files in other folders)
